--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
  <meta name="googlebot" content="index, follow">
  <meta name="bingbot" content="index, follow">
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="a5b451d269a77508" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Monster Paint Calgary offers professional painting services in Calgary including interior and exterior painting, drywall repair, and staining. Fully insured, locally owned, and trusted for quality workmanship.">
+  <meta name="description" content="Monster Paint Calgary offers professional painting services in Calgary, including interior and exterior painting, drywall repair, and staining. Fully insured, locally owned, and trusted for quality workmanship.">
   <title>Monster Paint Calgary: Commercial Painters & Renos Ltd.</title>
 </head>
 <body>
