--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <header>
-    <h1>Monster Paint Calgary: Commercial Painters & Renos Ltd.</h1>
+    <h1>Monster Paint Calgary Commercial Painters & Renos Ltd.</h1>
     <link rel="stylesheet" href="style.css">
   </header>
 
