--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <meta name="google-site-verification" content="m408ffDC8TpOXvXbXjCfxelyjah_D_NxYGmX72qyiCI" />
  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Monster Paint Calgary offers professional painting services in Calgary, including interior and exterior painting, drywall repair, and staining. Fully insured, locally owned, and trusted for quality workmanship.">
