--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <li>Clear communication from start to finish.</li>
     </ul>
     <p>Clients often say, “I’m extremely grateful. Ante was professional, careful with the ladder, and a pleasure to deal with.” Their focus on customer satisfaction ensures <strong>every need is met</strong>, from consultation to the <strong>final brush stroke</strong>.</p>
-  </section>
-       </Visit here for <a href="reviews.html">Finding Trusted Painters in Calgary: A Complete Guide</a>
+  </section> </Visit here for <a href="reviews.html">Finding Trusted Painters in Calgary: A Complete Guide</a>
+       
   <section>
     <h2>Interior Painting Services in Calgary</h2>
     <p>Monster Paint’s interior expertise covers bedrooms, kitchens, living rooms, basements, and more. Their <strong>painting process</strong> ensures:</p>
