--- a/index.html
+++ b/index.html
@@ -1,130 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta name="google-site-verification" content="m408ffDC8TpOXvXbXjCfxelyjah_D_NxYGmX72qyiCI" />
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Monster Paint Calgary offers professional painting services in Calgary, including interior and exterior painting, drywall repair, and staining. Fully insured, locally owned, and trusted for quality workmanship.">
-  <title>Monster Paint Calgary: Commercial Painters & Renos Ltd.</title>
+  <title>Monster Paint Calgary - Commercial Painters & Renos Ltd</title>
+  <style>
+    /* Reset */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    /* Blue header */
+    .blue-header {
+      background-color: #007BFF; /* bright blue */
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .blue-header h1 {
+      margin: 0;
+      font-size: 2rem;
+      font-weight: bold;
+    }
+
+    .blue-header p {
+      margin: 10px 0 0;
+      font-size: 1.2rem;
+    }
+
+    /* Main content container */
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;       /* makes it separate from header */
+      border-radius: 6px;      /* optional rounded corners */
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); /* subtle shadow */
+    }
+
+    h2 {
+      color: #007BFF;
+      margin-top: 30px;
+    }
+
+    a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #333;
+      color: white;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
 
-  <header>
+  <!-- Blue Header -->
+  <header class="blue-header">
     <h1>Monster Paint Calgary Commercial Painters & Renos Ltd.</h1>
-    <link rel="stylesheet" href="style.css">
+    
   </header>
 
-  <section>
-    <h2>Transform Your Space with Monster Paint Calgary</h2>
-    <p>A fresh coat of high-quality paint can do more than change color it can <strong>transform your space</strong>. Whether you need a quick home refresh or a business makeover, <a href="https://www.mnstrpaint.com/">Monster Paint Calgary</a> delivers <strong>painting solutions</strong> with quality workmanship and long-lasting results.</p>
-    <p>From a <strong>two-story stucco home</strong> (completed in as little as 2 days) to large <strong>commercial projects</strong>, homeowners and business owners trust this <strong>locally family-owned</strong>, <strong>fully insured</strong> company for being honest and professional.</p>
-   </section>
+  <!-- Main Content -->
+  <main>
+      <p>
+    </h2>Transform Your Space with Monster Paint Calgary</h2>
+    <p>
+      A fresh coat of high-quality paint can do more than change color—it can transform your space. 
+      Whether you need a quick home refresh or a business makeover, <a href="https://www.mnstrpaint.com/">Monster Paint Calgary</a> delivers 
+      painting solutions with quality workmanship and long-lasting results.
+    </p>
 
-  <section>
+    <p>
+      From a two-story stucco home (completed in as little as 2 days) to large commercial projects, 
+      homeowners and business owners trust this locally family-owned, fully insured company for being honest 
+      and professional.
+    </p>
+
     <h2>About Monster Paint Calgary</h2>
-    <p>Monster Paint Calgary isn’t part of a franchise it’s a team that treats each project with care. Their approach combines:</p>
+    <p>
+      Monster Paint Calgary isn’t part of a franchise—it’s a team that treats each project with care. 
+      Their approach combines:
+    </p>
     <ul>
-      <li><strong>Proper prep work</strong> and thorough <strong>surface prep</strong>.</li>
-      <li>Skilled painters who ensure a <strong>paint job excellent</strong> enough to last.</li>
-      <li><strong>Premium paints</strong> for durability and a flawless finish.</li>
+      <li>Proper prep work and thorough surface prep.</li>
+      <li>Skilled painters who ensure a paint job excellent enough to last.</li>
+      <li>Premium paints for durability and a flawless finish.</li>
       <li>Clear communication from start to finish.</li>
     </ul>
-    <p>Clients often say, “I’m extremely grateful. Ante was professional, careful with the ladder, and a pleasure to deal with.” Their focus on customer satisfaction ensures <strong>every need is met</strong>, from consultation to the <strong>final brush stroke</strong>.</p>
-  </section> 
-        Visit here for <a href="reviews.html">Finding Trusted Painters in Calgary: A Complete Guide</a>
-       <section>
+    <p>
+      Clients often say, “I’m extremely grateful. Ante was professional, careful with the ladder, 
+      and a pleasure to deal with.” Their focus on customer satisfaction ensures every need is met, 
+      from consultation to the final brush stroke.
+    </p>
+
+    <p>
+      Visit here for <a href="#">Finding Trusted Painters in Calgary: A Complete Guide</a>
+    </p>
+
     <h2>Interior Painting Services in Calgary</h2>
-    <p>Monster Paint’s interior expertise covers bedrooms, kitchens, living rooms, basements, and more. Their <strong>painting process</strong> ensures:</p>
     <ul>
       <li>Cracks are filled, walls sanded, and primed for smooth results.</li>
-      <li><strong>Color consultations</strong> to help you choose the perfect palette.</li>
+      <li>Color consultations to help you choose the perfect palette.</li>
       <li>Finishes that fit your lifestyle: matte, satin, or gloss.</li>
     </ul>
-    <p>The team manages everything from start to finish, leaving your home clean and refreshed an easy way to <strong>boost your space</strong> without major renovations.</p>
-  </section>
 
-  <section>
     <h2>Exterior Painting Service</h2>
-    <p>Calgary’s weather can be harsh, but Monster Paint has you covered. Their <strong>exterior work</strong> includes stucco, siding, trim, windows, fences, and decks.</p>
-    <h3>Highlights include:</h3>
     <ul>
       <li>Using weather-resistant paints.</li>
-      <li>Professional safety practices, including <strong>fall protection</strong>.</li>
+      <li>Professional safety practices, including fall protection.</li>
       <li>Durable finishes that protect against Alberta’s climate.</li>
     </ul>
-    <p>For homeowners, exterior painting can <strong>give us an estimate</strong> of improved curb appeal and higher property value—without sacrificing quality.</p>
-  </section>
 
-  <section>
     <h2>Commercial Painting Service</h2>
-    <p>Businesses benefit from Monster Paint’s <strong>commercial painters in Calgary</strong>, who specialize in offices, restaurants, retail spaces, and industrial buildings.</p>
+    <p>
+      Businesses benefit from Monster Paint’s commercial painters in Calgary, who specialize in offices, 
+      restaurants, retail spaces, and industrial buildings.
+    </p>
     <ul>
-      <li><strong>Commercial projects can range</strong> in size, and timelines <strong>vary depending on the scope of the project</strong>.</li>
-      <li>The team knows how to <strong>work efficiently</strong> with minimal disruption.</li>
-      <li>Services include both <strong>painting and drywall</strong>, ensuring a polished and <strong>professional look</strong>.</li>
+      <li>Commercial projects can range in size, and timelines vary depending on scope.</li>
+      <li>Efficient work with minimal disruption.</li>
+      <li>Services include both painting and drywall.</li>
     </ul>
-    <p>Whether it’s small touch-ups or full building projects, their expertise ensures lasting, high-impact results.</p>
-  </section>
 
-  <section>
     <h2>Why Choose Monster Paint Calgary?</h2>
     <ul>
-      <li>Skilled painters, including <strong>interior and exterior</strong>, deliver <strong>quality workmanship</strong>.</li>
-      <li>Clear estimates—just call and say, “<strong>Give us an estimate</strong>.”</li>
-      <li>Commitment to <strong>honest and professional</strong> service.</li>
-      <li>A flawless finish on every project, from small jobs to large <strong>commercial projects</strong>.</li>
+      <li>Skilled painters delivering interior & exterior quality workmanship.</li>
+      <li>Clear estimates — just call and say, “Give us an estimate.”</li>
+      <li>Commitment to honest and professional service.</li>
+      <li>A flawless finish on every project.</li>
     </ul>
-    <p>They also work with <strong>Monster Staining and Reno’s</strong>, giving clients more options for home upgrades.</p>
-  </section>
 
-  <section>
-    <h2>The Value of Hiring Professionals</h2>
-    <p>While DIY painting might sound appealing, hiring professionals offers clear advantages:</p>
-    <ul>
-      <li><strong>Proper prep work</strong> that ensures durability.</li>
-      <li><strong>Premium paints</strong> applied with precision.</li>
-      <li>Safe practices, including <strong>fall protection</strong>.</li>
-      <li>A stress-free process where the <strong>finish is flawless</strong>.</li>
-    </ul>
-    <p>Professional painters ensure your investment delivers lasting value, <strong>without compromising on quality</strong>.</p>
-  </section>
-
-  <section>
-    <h2>Service Areas</h2>
-    <p>Monster Paint Calgary proudly serves:</p>
-    <ul>
-      <li>Calgary and nearby communities.</li>
-      <li>Homes of all sizes, including <strong>two-story stucco homes</strong>.</li>
-      <li>Businesses across industries, from retail to industrial.</li>
-    </ul>
-    <p>Every project is customized to fit your needs—whether residential or commercial.</p>
-  </section>
-
-  <section>
-    <h2>Conclusion</h2>
-    <p>Painting is one of the most cost-effective ways to upgrade a property. The cost in Calgary <strong>can vary depending</strong> on project size, but with Monster Paint Calgary, you always get <strong>quality painting</strong> at <strong>competitive pricing</strong>, <strong>without sacrificing quality</strong>.</p>
-    <p>From <strong>painting and drywall</strong> to large commercial projects, their locally owned team ensures <strong>lasting results</strong> with a polished, <strong>professional look</strong>. For homeowners and businesses seeking dependable <strong>services in Calgary</strong>, Monster Paint remains a top choice.</p>
-  </section>
-
-  <section>
     <h2>Frequently Asked Questions</h2>
-    <ol>
-      <li><strong>Do they handle both residential and commercial projects?</strong><br>
-      Yes. Monster Paint works on homes, offices, and large-scale <strong>commercial projects</strong>.</li>
+    <p><strong>Do they handle both residential and commercial projects?</strong> Yes.</p>
+    <p><strong>Is the estimate free?</strong> Yes, they provide free painting quotes.</p>
+    <p><strong>What type of paint do they use?</strong> Durable, high-quality paints.</p>
+    <p><strong>Do they help with choosing colors?</strong> Yes, via consultations.</p>
+    <p><strong>How long does a project take?</strong> Timelines vary by project size.</p>
+  </main>
 
-      <li><strong>Is the estimate free?</strong><br>
-      Yes, they provide free residential and commercial painting quotes. Just ask, “<strong>Give us an estimate</strong>.”</li>
-
-      <li><strong>What type of paint do they use?</strong><br>
-      They use durable, high-quality paints designed for long-lasting color.</li>
-
-      <li><strong>Do they help with choosing colors?</strong><br>
-      Yes, their <strong>color consultations</strong> guide you to the perfect shade for your style.</li>
-
-      <li><strong>How long does a painting project take?</strong><br>
-      Timelines <strong>vary depending on the scope of the project</strong>, but they’re known to <strong>work efficiently</strong> and deliver on schedule.</li>
-    </ol>
-  </section>
+  <!-- Footer -->
+  <footer>
+    © 2025 Monster Paint Calgary. All rights reserved.
+  </footer>
 
 </body>
 </html>
