Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="m408ffDC8TpOXvXbXjCfxelyjah_D_NxYGmX72qyiCI" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monster Paint Calgary - Commercial Painters & Renos Ltd</title>
